--- a/client/views/event/event-edit.view.client.html
+++ b/client/views/event/event-edit.view.client.html
@@ -15,6 +15,10 @@
 </nav>
 
 <div class="container-fluid">
+    <div ng-if="model.error" class="alert alert-danger" role="alert">
+        {{model.error}}
+    </div>
+
     <form name="eventForm" id="eventForm" novalidate>
         <div class="form-group">
             <label for="event-name">Name</label>
@@ -27,19 +31,30 @@
         <div ng-show="eventForm.$submitted && eventForm.name.$invalid">
             Event name is required
         </div>
+
         <div class="form-group">
             <label for="event-date">Date</label>
             <input ng-model="model.event.date"
+                    name="date"
                    id="event-date"
-                   class="form-control"/>
+                   class="form-control" required/>
         </div>
+        <div ng-show="eventForm.$submitted && eventForm.date.$invalid">
+            Event date is required
+        </div>
+
         <div class="form-group">
             <label for="event-location">Location</label>
             <input ng-model="model.event.location" type="text"
+                    name="location"
                       id="event-location"
                       class="form-control"
-                      placeholder="Event Location"/>
+                      placeholder="Event Location" required/>
         </div>
+        <div ng-show="eventForm.$submitted && eventForm.location.$invalid">
+            Event location is required
+        </div>
+
         <div class="form-group">
             <label for="event-capacity">Capacity</label>
             <input ng-model="model.event.capacity" type="text"
@@ -49,11 +64,20 @@
         </div>
         <div class="form-group">
             <label for="event-description">Description</label>
-            <textarea ng-model="model.event.description" rows="4"
+            <textarea ng-model="model.event.description" rows="2"
                       id="event-description"
                       class="form-control"
                       placeholder="Event Description"></textarea>
         </div>
+        <div class="form-group">
+            <label for="event-imageUrl">Image URL</label>
+            <input ng-model="model.event.imageUrl"
+                      id="event-imageUrl"
+                      class="form-control"
+                      placeholder="Event Image URL"/>
+            <img width="100%" ng-src="{{model.event.imageUrl}}"/>
+        </div>
+
         <div class="form-group">
             <label>Attendees</label>
             <li ng-repeat="attendee in model.attendees" class="list-group-item">
@@ -62,6 +86,14 @@
         </div>
         <a ng-click="model.deleteEvent()" class="btn btn-danger btn-block">Delete</a>
     </form>
+
+    <!--<form action="/api/event/uploads"  method="post" enctype="multipart/form-data">-->
+        <!--<input  name="myFile"   type="file" class="form-control"/>-->
+        <!--<input  name="event"    value="{{model.event}}" style="display: none"/>-->
+        <!--<input  name="eventID" value="{{model.event._id}}"   style="display: none"/>-->
+        <!--<button type="submit"   class="btn btn-block btn-primary">Upload Image</button>-->
+    <!--</form>-->
+
 </div>
 
 <script>
