--- a/client/views/event/event-new.view.client.html
+++ b/client/views/event/event-new.view.client.html
@@ -31,19 +31,30 @@
         <div ng-show="eventForm.$submitted && eventForm.name.$invalid">
             Event name is required
         </div>
+
         <div class="form-group">
             <label for="event-date">Date</label>
             <input ng-model="event.date"
+                   name="date"
                    id="event-date"
-                   class="form-control"/>
+                   class="form-control" required/>
         </div>
+        <div ng-show="eventForm.$submitted && eventForm.date.$invalid">
+            Event date is required
+        </div>
+
         <div class="form-group">
             <label for="event-location">Location</label>
             <input ng-model="event.location" type="text"
+                    name="location"
                       id="event-location"
                       class="form-control"
-                      placeholder="Event Location"/>
+                      placeholder="Event Location" required/>
         </div>
+        <div ng-show="eventForm.$submitted && eventForm.location.$invalid">
+            Event location is required
+        </div>
+
         <div class="form-group">
             <label for="event-capacity">Capacity</label>
             <input ng-model="event.capacity" type="text"
@@ -51,23 +62,24 @@
                    class="form-control"
                    placeholder="Event Capacity"/>
         </div>
+
         <div class="form-group">
             <label for="event-description">Description</label>
-            <textarea ng-model="event.description" rows="4"
+            <textarea ng-model="event.description" rows="2"
                       id="event-description"
                       class="form-control"
                       placeholder="Event Description"></textarea>
         </div>
+
+        <div class="form-group">
+            <label for="event-imageUrl">Image URL</label>
+            <input ng-model="model.event.imageUrl"
+                   id="event-imageUrl"
+                   class="form-control"
+                   placeholder="Event Image URL"/>
+        </div>
     </form>
 
-    <!--<form action="/api/event/uploads"  method="post" enctype="multipart/form-data">-->
-        <!--<input  name="myFile"   type="file" class="form-control"/>-->
-        <!--<input  name="event"    value="{{model.event}}" style="display: none"/>-->
-        <!--&lt;!&ndash;<input  name="text"    value="{{model.widget.text}}" style="display: none"/>&ndash;&gt;-->
-        <!--&lt;!&ndash;<input  name="width"    value="{{model.widget.width}}" style="display: none"/>&ndash;&gt;-->
-        <!--<input  name="eventID" value="{{model.event._id}}"   style="display: none"/>-->
-        <!--<button type="submit"   class="btn btn-block btn-primary">Upload Image</button>-->
-    <!--</form>-->
 </div>
 
 <script>
