--- a/client/views/user-client/login.view.client.html
+++ b/client/views/user-client/login.view.client.html
@@ -4,10 +4,15 @@
         {{model.alert}}
     </div>
 
-    <h1>Login</h1>
+    <h1>User Login</h1>
 
     <a href="/auth/facebook" class="btn btn-danger btn-block">
         <span class="fa fa-facebook"></span>
         Facebook
+    </a>
+
+    <a href="/auth/google" class="btn btn-primary btn-block">
+        <span class="fa fa-google-plus"></span>
+        Google
     </a>
 </div>
